--- a/Client/Dt.Sample/ListView/LvTable.xaml
+++ b/Client/Dt.Sample/ListView/LvTable.xaml
@@ -14,10 +14,10 @@
                         <a:Col ID="bh" Title="编号" Width="80" />
                         <a:Col ID="chushengrq" Title="出生日期" Width="120" />
                         <a:Col ID="shenfenzh" Title="身份证号码" Width="200" />
-                        <a:Col ID="xb" Title="性别" Width="50" />
+                        <a:Col ID="xb" Title="性别" Width="50" FontSize="12" />
                         <a:Col ID="hunfou" Title="婚否" Width="50" />
-                        <a:Col ID="shengao" Title="身高" Width="60" />
-                        <a:Col ID="bumen" Title="所属部门" Width="100" />
+                        <a:Col ID="shengao" Title="身高" Width="60" FontStyle="Italic" FontWeight="Bold" />
+                        <a:Col ID="bumen" Title="所属部门" Width="100" Foreground="White" Background="Gray" />
                         <a:Col ID="note" Title="备注" Width="150" RowSpan="2" />
                     </a:Cols>
                 </a:Lv>
