--- a/Client/Dt.Base/Themes/Styles/Desk.xaml
+++ b/Client/Dt.Base/Themes/Styles/Desk.xaml
@@ -26,9 +26,9 @@
                     <Grid Background="{StaticResource 默认背景}">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="40" />
-                            <RowDefinition />
+                            <RowDefinition Height="*" />
                         </Grid.RowDefinitions>
-                        <!--任务栏-->
+                        <!--任务栏高40-->
                         <Grid>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="Auto" />
@@ -44,21 +44,20 @@
                                 </StackPanel.ChildrenTransitions>
                             </StackPanel>
                         </Grid>
-                        <!--留出右边距-1-->
-                        <Grid x:Name="ContentGrid" Margin="0,4,1,0" Grid.Row="1">
+                        <!--内容区域，留出右边距-1，与任务栏间距4-->
+                        <Grid x:Name="ContentGrid" Padding="0,4,1,0" Grid.Row="1">
                             <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="Auto" />
-                                <ColumnDefinition Width="Auto" />
-                                <ColumnDefinition />
-                                <ColumnDefinition Width="Auto" />
-                                <ColumnDefinition Width="Auto" />
+                                <!--左窗口-->
+                                <ColumnDefinition Width="0" />
+                                <!--Splitter-->
+                                <ColumnDefinition Width="0" />
+                                <!--主窗口-->
+                                <ColumnDefinition Width="*" />
+                                <!--Splitter-->
+                                <ColumnDefinition Width="0" />
+                                <!--右窗口-->
+                                <ColumnDefinition Width="0" />
                             </Grid.ColumnDefinitions>
-                            <!--Splitter放在底层，确保显示边距-1的边框-->
-                            <a:Splitter x:Name="LeftSplitter" Visibility="Collapsed" Grid.Column="1" />
-                            <a:Splitter x:Name="RightSplitter" Visibility="Collapsed" Grid.Column="3" />
-                            <ContentPresenter Content="{TemplateBinding LeftWin}" />
-                            <ContentPresenter Content="{TemplateBinding MainWin}" Grid.Column="2" />
-                            <ContentPresenter Content="{TemplateBinding RightWin}" Grid.Column="4" />
                         </Grid>
                     </Grid>
                 </ControlTemplate>
@@ -124,7 +123,7 @@
         <Setter Property="VerticalAlignment" Value="Center" />
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="ButtonBase">
+                <ControlTemplate TargetType="Button">
                     <Grid x:Name="RootGrid" Background="Transparent">
                         <TextBlock x:Name="ElementTitle"
                                    Text="&#xE018;"
@@ -200,6 +199,80 @@
                                 <VisualState x:Name="Selected">
                                     <VisualState.Setters>
                                         <Setter Target="SelectedBorder.Visibility" Value="Visible" />
+                                    </VisualState.Setters>
+                                </VisualState>
+                            </VisualStateGroup>
+                        </VisualStateManager.VisualStateGroups>
+                    </Grid>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <!--任务栏关闭按钮-->
+    <Style x:Key="SplitterCloseButton" TargetType="Button">
+        <Setter Property="Height" Value="40" />
+        <Setter Property="HorizontalAlignment" Value="Stretch" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="Button">
+                    <Grid x:Name="RootGrid" Background="Transparent" BorderThickness="1">
+                        <TextBlock x:Name="ElementTitle"
+                                   Text="{TemplateBinding Content}"
+                                   FontFamily="{StaticResource IconFont}"
+                                   FontSize="16"
+                                   HorizontalAlignment="Center"
+                                   VerticalAlignment="Center"
+                                   Foreground="{StaticResource 深灰边框}" />
+
+                        <VisualStateManager.VisualStateGroups>
+                            <VisualStateGroup x:Name="CommonStates">
+                                <VisualState x:Name="Normal"/>
+                                <VisualState x:Name="PointerOver">
+                                    <VisualState.Setters>
+                                        <Setter Target="RootGrid.Background" Value="{StaticResource 暗遮罩}" />
+                                        <Setter Target="RootGrid.BorderBrush" Value="{StaticResource 深暗遮罩}" />
+                                    </VisualState.Setters>
+                                </VisualState>
+                                <VisualState x:Name="Pressed">
+                                    <VisualState.Setters>
+                                        <Setter Target="RootGrid.Background" Value="{StaticResource 深暗遮罩}" />
+                                    </VisualState.Setters>
+                                </VisualState>
+                                <VisualState x:Name="Disabled" />
+                            </VisualStateGroup>
+                        </VisualStateManager.VisualStateGroups>
+                    </Grid>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <!--Splitter-->
+    <Style TargetType="a:Splitter">
+        <Setter Property="Width" Value="30"/>
+        <Setter Property="Margin" Value="-1,0,-1,0"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="a:Splitter">
+                    <Grid Background="{StaticResource 浅灰背景}" BorderBrush="{StaticResource 浅灰边框}" BorderThickness="1">
+                        <StackPanel x:Name="GripDotsPanel" VerticalAlignment="Center" >
+                            <Button x:Name="CloseLeftButton" Content="&#xE062;" Style="{StaticResource SplitterCloseButton}" />
+                            <StackPanel x:Name="DragPanel" Padding="0,20,0,20" Margin="8,0,8,0" Background="Transparent">
+                                <Ellipse Width="6" Height="6" Fill="{StaticResource 深灰边框}" HorizontalAlignment="Center" />
+                                <Ellipse Width="6" Height="6" Fill="{StaticResource 深灰边框}" HorizontalAlignment="Center" Margin="0,10,0,10" />
+                                <Ellipse Width="6" Height="6" Fill="{StaticResource 深灰边框}" HorizontalAlignment="Center" />
+                            </StackPanel>
+                            <Button x:Name="CloseRightButton" Content="&#xE063;" Style="{StaticResource SplitterCloseButton}" />
+                        </StackPanel>
+                        <Rectangle x:Name="BorderLine" Width="4" Fill="{StaticResource 醒目红色}" Visibility="Collapsed" IsHitTestVisible="False" />
+                        
+                        <VisualStateManager.VisualStateGroups>
+                            <VisualStateGroup x:Name="CommonStates">
+                                <VisualState x:Name="Normal" />
+                                <VisualState x:Name="Dragging">
+                                    <VisualState.Setters>
+                                        <Setter Target="BorderLine.Visibility" Value="Visible" />
                                     </VisualState.Setters>
                                 </VisualState>
                             </VisualStateGroup>
