浮动面板用对话框实现

--- a/Client/Dt.Sample/Structure/DlgDemo.xaml
+++ b/Client/Dt.Sample/Structure/DlgDemo.xaml
@@ -5,6 +5,7 @@
     xmlns:a="using:Dt.Base">
 
     <a:Fv x:Name="_fv">
+        <a:CBar Title="自定义对话框" />
         <a:CList ID="Placement" Title="显示位置" />
         <a:CText x:Name="_tgt" ID="Target" Title="相对目标" />
         <a:CBool ID="Pin" Title="固定不自动关闭" />
@@ -16,10 +17,14 @@
             <Button Content="异步等待对话框" Click="OnShowAsync" />
             <Button Content="随机位置显示" Click="OnShowPos" />
         </StackPanel>
+        <Button Content="椭圆形对话框" Click="OnClicked4" />
+        <a:CBar Title="内置对话框" />
         <StackPanel Orientation="Horizontal">
             <Button Content="确认对话框" Click="OnClicked1" />
             <Button Content="错误对话框" Click="OnClicked2" />
-            <Button Content="椭圆形对话框" Click="OnClicked4" />
         </StackPanel>
+        <a:CBar Title="提示信息对话框" />
+        <TextBox x:Name="_tb" PlaceholderText="文本框内容含4出警告框" TextChanged="OnTextChanged" />
+        <Button x:Name="_btn" Content="显示消息框" Click="OnMsgClick" />
     </a:Fv>
 </a:Win>
