--- a/Client/Dt.Sample/Styles/TestDemo2.xaml
+++ b/Client/Dt.Sample/Styles/TestDemo2.xaml
@@ -7,8 +7,8 @@
     <a:WinCenter>
         <a:Tabs ShowHeader="False">
             <a:Tab>
-                <!--<ContentControl x:Name="_con" />-->
-                <Path Width="200" Height="200" Fill="Red" Data="M 45,155.368421052632 Z" />
+                <ContentControl x:Name="_con" />
+                <!--<Path Width="200" Height="200" Fill="Red" Data="M 45,155.368421052632 Z" />-->
             </a:Tab>
         </a:Tabs>
     </a:WinCenter>
