uno升级到3.0.0-dev.1002，大调整

--- a/Client/Dt.Base/Themes/Styles/Sketch.xaml
+++ b/Client/Dt.Base/Themes/Styles/Sketch.xaml
@@ -3,9 +3,9 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base"
     xmlns:sketch="using:Dt.Base.Sketches">
-    
+
     <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="/Dt.Base/Themes/Global.xaml"/>
+        <ResourceDictionary Source="ms-appx:///Dt.Base/Themes/Global.xaml"/>
     </ResourceDictionary.MergedDictionaries>
 
     <!--静态资源-->
