--- a/Client/Dt.Base/Themes/Generic.xaml
+++ b/Client/Dt.Base/Themes/Generic.xaml
@@ -2,16 +2,16 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation">
 
     <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="/Dt.Base/Themes/Styles/Default.xaml" />
-        <ResourceDictionary Source="/Dt.Base/Themes/Styles/Base.xaml" />
-        <ResourceDictionary Source="/Dt.Base/Themes/Styles/Desk.xaml" />
-        <ResourceDictionary Source="/Dt.Base/Themes/Styles/Win.xaml" />
-        <ResourceDictionary Source="/Dt.Base/Themes/Styles/Dialog.xaml" />
-        <ResourceDictionary Source="/Dt.Base/Themes/Styles/Menu.xaml" />
-        <ResourceDictionary Source="/Dt.Base/Themes/Styles/FormView.xaml" />
-        <ResourceDictionary Source="/Dt.Base/Themes/Styles/ListView.xaml" />
-        <ResourceDictionary Source="/Dt.Base/Themes/Styles/TreeView.xaml" />
-        <ResourceDictionary Source="/Dt.Base/Themes/Styles/FileList.xaml" />
-        <ResourceDictionary Source="/Dt.Base/Themes/Styles/Sketch.xaml" />
+        <ResourceDictionary Source="ms-appx:///Dt.Base/Themes/Global.xaml" />
+        <ResourceDictionary Source="ms-appx:///Dt.Base/Themes/Styles/Base.xaml" />
+        <ResourceDictionary Source="ms-appx:///Dt.Base/Themes/Styles/Desk.xaml" />
+        <ResourceDictionary Source="ms-appx:///Dt.Base/Themes/Styles/Win.xaml" />
+        <ResourceDictionary Source="ms-appx:///Dt.Base/Themes/Styles/Dialog.xaml" />
+        <ResourceDictionary Source="ms-appx:///Dt.Base/Themes/Styles/Menu.xaml" />
+        <ResourceDictionary Source="ms-appx:///Dt.Base/Themes/Styles/FormView.xaml" />
+        <ResourceDictionary Source="ms-appx:///Dt.Base/Themes/Styles/ListView.xaml" />
+        <ResourceDictionary Source="ms-appx:///Dt.Base/Themes/Styles/TreeView.xaml" />
+        <ResourceDictionary Source="ms-appx:///Dt.Base/Themes/Styles/FileList.xaml" />
+        <ResourceDictionary Source="ms-appx:///Dt.Base/Themes/Styles/Sketch.xaml" />
     </ResourceDictionary.MergedDictionaries>
 </ResourceDictionary>
