--- a/Client/Dt.Base/Themes/Styles/Base.xaml
+++ b/Client/Dt.Base/Themes/Styles/Base.xaml
@@ -4,8 +4,7 @@
     xmlns:a="using:Dt.Base">
 
     <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="/Dt.Base/Themes/Global.xaml"/>
-        <ResourceDictionary Source="/Dt.Base/Themes/Styles/Default.xaml"/>
+        <ResourceDictionary Source="ms-appx:///Dt.Base/Themes/Global.xaml"/>
     </ResourceDictionary.MergedDictionaries>
 
     <!--BtnItem-->
@@ -203,6 +202,20 @@
                                 Style="{StaticResource 字符按钮}"
                                 Grid.Column="1" />
                     </Grid>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style TargetType="a:TestInvoke">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="a:TestInvoke">
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Text="{TemplateBinding Title}" />
+                        <TextBlock Text=" -- " />
+                        <ContentPresenter Content="{TemplateBinding Child}" />
+                    </StackPanel>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
