--- a/Client/Dt.Base/Themes/Styles/Desk.xaml
+++ b/Client/Dt.Base/Themes/Styles/Desk.xaml
@@ -4,8 +4,7 @@
     xmlns:a="using:Dt.Base">
 
     <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="/Dt.Base/Themes/Global.xaml"/>
-        <ResourceDictionary Source="/Dt.Base/Themes/Styles/Default.xaml"/>
+        <ResourceDictionary Source="ms-appx:///Dt.Base/Themes/Global.xaml"/>
     </ResourceDictionary.MergedDictionaries>
 
     <!--
