--- a/Client/Dt.Base/Themes/Styles/Dialog.xaml
+++ b/Client/Dt.Base/Themes/Styles/Dialog.xaml
@@ -4,8 +4,7 @@
     xmlns:a="using:Dt.Base">
 
     <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="/Dt.Base/Themes/Global.xaml"/>
-        <ResourceDictionary Source="/Dt.Base/Themes/Styles/Default.xaml"/>
+        <ResourceDictionary Source="ms-appx:///Dt.Base/Themes/Global.xaml"/>
     </ResourceDictionary.MergedDictionaries>
 
     <!--Dlg windows-->
@@ -64,8 +63,8 @@
         </Setter>
     </Style>
 
-    <!--Dlg Phone-->
-    <Style x:Key="PhoneDlg" TargetType="a:Dlg">
+    <!--Dlg PhoneUI模式为缺省样式-->
+    <Style TargetType="a:Dlg">
         <Setter Property="Foreground" Value="{StaticResource 默认前景}" />
         <Setter Property="Background" Value="{StaticResource 默认背景}" />
         <Setter Property="FontSize" Value="{StaticResource 中字号}" />
