--- a/Client/Dt.Base/Themes/Styles/ListView.xaml
+++ b/Client/Dt.Base/Themes/Styles/ListView.xaml
@@ -5,10 +5,8 @@
     xmlns:lv="using:Dt.Base.ListView">
 
     <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="/Dt.Base/Themes/Global.xaml"/>
-        <ResourceDictionary Source="/Dt.Base/Themes/Styles/Default.xaml"/>
+        <ResourceDictionary Source="ms-appx:///Dt.Base/Themes/Global.xaml"/>
     </ResourceDictionary.MergedDictionaries>
-
     <!--Lv-->
     <Style TargetType="a:Lv">
         <Setter Property="Foreground" Value="{StaticResource 默认前景}" />
