--- a/Client/Dt.Base/Themes/Styles/Menu.xaml
+++ b/Client/Dt.Base/Themes/Styles/Menu.xaml
@@ -5,8 +5,7 @@
     xmlns:menu="using:Dt.Base.MenuView">
 
     <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="/Dt.Base/Themes/Global.xaml"/>
-        <ResourceDictionary Source="/Dt.Base/Themes/Styles/Default.xaml"/>
+        <ResourceDictionary Source="ms-appx:///Dt.Base/Themes/Global.xaml"/>
     </ResourceDictionary.MergedDictionaries>
 
     <!--Menu-->
