--- a/Client/Dt.Sample/Win/SingleViewWin.xaml
+++ b/Client/Dt.Sample/Win/SingleViewWin.xaml
@@ -6,7 +6,7 @@
 
     <a:WinCenter>
         <a:Tabs x:Name="_tabs">
-            <a:Tab>
+            <a:Tab Title="主区单视图">
                 <a:Tab.Menu>
                     <a:Menu>
                         <a:Mi ID="保存" Icon="保存" />
