--- a/Client/Dt.Sample/Excels/UseCase.xaml
+++ b/Client/Dt.Sample/Excels/UseCase.xaml
@@ -16,16 +16,39 @@
         <a:Tabs>
             <a:Tab Title="属性">
                 <a:Fv>
-                    <Button Content="月报" Click="OnMonthProfit" />
-                    <Button Content="课程表" Click="OnStudentCalendar" />
-                    <Button Content="表单" Click="OnTaxForm" />
-                    <Button Content="结婚预算" Click="OnWedding" />
-                    <Button Content="汽车维修跟踪" Click="OnCarRepairTracker" />
-                    <Button Content="消费趋势预算" Click="OnExpense" />
-                    <Button Content="按条件格式化" Click="OnConditionalFormat" />
-                    <Button Content="导出Xls" Click="SaveExcelFile" />
-                    <Button Content="导出Xml" Click="SaveXmlFile" />
-                    <Button Content="另存为PDF" Click="SavePDFFile" />
+                    <StackPanel Orientation="Horizontal">
+                        <Button Content="月报xls" Tag="MonthProfit.xlsx" Click="OnLoadFile" />
+                        <Button Content="月报xml" Tag="MonthProfit.ssxml" Click="OnLoadFile" />
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal">
+                        <Button Content="课程表xls" Tag="StudentCalendar.xlsx" Click="OnLoadFile" />
+                        <Button Content="课程表xml" Tag="StudentCalendar.ssxml" Click="OnLoadFile" />
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal">
+                        <Button Content="表单xls" Tag="1040.xlsx" Click="OnLoadFile" />
+                        <Button Content="表单xml" Tag="1040.ssxml" Click="OnLoadFile" />
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal">
+                        <Button Content="结婚预算xls" Tag="Wedding.xlsx" Click="OnLoadFile" />
+                        <Button Content="结婚预算xml" Tag="Wedding.ssxml" Click="OnLoadFile" />
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal">
+                        <Button Content="消费趋势xls" Tag="Expense.xlsx" Click="OnLoadFile" />
+                        <Button Content="消费趋势xml" Tag="Expense.ssxml" Click="OnLoadFile" />
+                        <Button Content="消费趋势格式化" Click="OnConditionalFormat" />
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal">
+                        <Button Content="汽车维修跟踪xls" Tag="CarRepair.xlsx" Click="OnLoadFile" />
+                        <Button Content="汽车维修跟踪xml" Tag="CarRepair.ssxml" Click="OnLoadFile" />
+                    </StackPanel>
+                    <a:CBar Title="导出" />
+                    <StackPanel Orientation="Horizontal">
+                        <Button Content="Xls" Click="SaveExcelFile" />
+                        <Button Content="Xml" Click="SaveXmlFile" />
+                        <Button Content="PDF" Click="SavePDFFile" />
+                        <Button Content="CSV" Click="SaveCsvFile" />
+                    </StackPanel>
+                    <Button Content="打开" Click="OpenFile" />
                 </a:Fv>
             </a:Tab>
         </a:Tabs>
